[gd_scene load_steps=4 format=3 uid="uid://cklq6bjwo3103"]

[ext_resource type="Script" uid="uid://dmd6txsa6xwd5" path="res://scripts/world_overlay_layer.gd" id="1_u0dv7"]
[ext_resource type="Texture2D" uid="uid://b5ovgpc7bfu71" path="res://assets/images/menu1.png" id="1_vaknc"]
[ext_resource type="Texture2D" uid="uid://ca6mgwjwifak3" path="res://assets/images/anadir.png" id="2_vaknc"]

[node name="WorldOverlayLayer" type="CanvasLayer"]
script = ExtResource("1_u0dv7")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SidepanelButton" type="Button" parent="Control"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(156, 156)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.076
anchor_top = 0.058
anchor_right = 0.076
anchor_bottom = 0.058
offset_left = -39.08
offset_top = -69.36
offset_right = 116.92
offset_bottom = 86.64
icon = ExtResource("1_vaknc")
flat = true
icon_alignment = 1
expand_icon = true

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
rotation = -6.28319

[node name="AddModelButton" type="Button" parent="Control/CenterContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(222, 222)
layout_mode = 2
icon = ExtResource("2_vaknc")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="Control/SidepanelButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/CenterContainer/AddModelButton" to="." method="_on_button_2_pressed"]
